# hptt

./: .gitignore  CMakeLists.txt  README  README.md
benchmark/: CMakeLists.txt
benchmark/inc/hptc/benchmark/: benchmark_trans_avx.h
benchmark/inc/hptc/perf-test/: test_perf_util.h  test_perf_util.tcc
benchmark/trans/: CMakeLists.txt
benchmark/trans/avx/: benchmark_s_021_2144x64x384_nopar.cc  benchmark_s_021_2144x64x384_par.cc  benchmark_s_021_368x384x384_nopar.cc  benchmark_s_021_368x384x384_par.cc  benchmark_s_021_368x64x2307_nopar.cc  benchmark_s_021_368x64x2307_par.cc  benchmark_s_0321_464x16x75x96_nopar.cc  benchmark_s_0321_464x16x75x96_par.cc  benchmark_s_0321_80x16x75x582_nopar.cc  benchmark_s_0321_80x16x75x582_par.cc  benchmark_s_0321_80x96x75x96_nopar.cc  benchmark_s_0321_80x96x75x96_par.cc  benchmark_s_032541_16x10x15x103x15x15_nopar.cc  benchmark_s_032541_16x10x15x103x15x15_par.cc  benchmark_s_032541_16x32x15x32x15x15_nopar.cc  benchmark_s_032541_16x32x15x32x15x15_par.cc  benchmark_s_032541_48x10x15x32x15x15_nopar.cc  benchmark_s_032541_48x10x15x32x15x15_par.cc  benchmark_s_04213_176x8x28x28x48_nopar.cc  benchmark_s_04213_176x8x28x28x48_par.cc  benchmark_s_04213_32x48x28x28x48_nopar.cc  benchmark_s_04213_32x48x28x28x48_par.cc  benchmark_s_04213_32x48x28x28x4_par_nobeta.cc  benchmark_s_04213_32x8x28x28x298_nopar.cc  benchmark_s_04213_32x8x28x28x298_par.cc  benchmark_s_102_2320x384x59_nopar.cc  benchmark_s_102_2320x384x59_par.cc  benchmark_s_102_2320x384x5_nopar_beta.cc  benchmark_s_102_2320x384x5_par_beta.cc  benchmark_s_102_2320x384x5_par_nobeta.cc  benchmark_s_102_384x2320x59_nopar.cc  benchmark_s_102_384x2320x59_par.cc  benchmark_s_102_384x2320x5_nopar_beta.cc  benchmark_s_102_384x2320x5_par_beta.cc  benchmark_s_102_384x2320x5_par_nobeta.cc  benchmark_s_102_384x384x355_nopar.cc  benchmark_s_102_384x384x355_par.cc  benchmark_s_102_384x384x35_nopar_beta.cc  benchmark_s_102_384x384x35_par_beta.cc  benchmark_s_102_384x384x35_par_nobeta.cc  (+210 more)
inc/hptc/: compat.h  (+11 more)
src/: CMakeLists.txt  hptc.cc  hptc_trans.cc  hptt.cc  operation.cc  tensor.cc  util.cc
src/arch/: arch.cc  compat.cc
src/arch/arm/: kernel_trans_arm.cc
src/arch/avx/: kernel_trans_avx.cc
src/arch/avx2/: kernel_trans_avx2.cc
src/arch/common/: kernel_trans_common.cc
src/arch/ibm/: kernel_trans_ibm.cc
src/cgraph/: cgraphs.cc
src/impl/: hptc_trans_impl_c.cc  hptc_trans_impl_d.cc  hptc_trans_impl_s.cc  hptc_trans_impl_z.cc  hptt_trans_impl_c.cc  hptt_trans_impl_d.cc  hptt_trans_impl_s.cc  hptt_trans_impl_z.cc
src/kernels/: arch.cc  kernel_trans.cc  kernel_trans_avx.cc  kernel_trans_avx2_full.cc  kernel_trans_avx2_half.cc  kernel_trans_avx_full.cc  kernel_trans_avx_half.cc  kernel_trans_avx_linear.cc  kernel_trans_common.cc  kernels.cc  macro_kernel_trans.cc  macro_kernel_trans_alpha.cc  macro_kernel_trans_beta.cc  macro_kernel_trans_both.cc  macro_kernel_trans_none.cc  micro_kernel_trans.cc
src/kernels/avx/: kernel_trans_avx.cc
src/kernels/avx2/: kernel_trans_avx2.cc
src/kernels/common/: kernel_trans_common.cc
src/operations/: operation_trans.cc  operations.cc
src/param/: parameter_trans.cc  parameter_trans_c_alpha.cc  parameter_trans_c_beta.cc  parameter_trans_c_both.cc  parameter_trans_c_none.cc  parameter_trans_d_alpha.cc  parameter_trans_d_beta.cc  parameter_trans_d_both.cc  parameter_trans_d_none.cc  parameter_trans_s_alpha.cc  parameter_trans_s_beta.cc  parameter_trans_s_both.cc  parameter_trans_s_none.cc  parameter_trans_z_alpha.cc  parameter_trans_z_beta.cc  parameter_trans_z_both.cc  parameter_trans_z_none.cc  parameters.cc
src/plan/: plans.cc
src/util/: util.cc  util_trans.cc
test/: CMakeLists.txt  example.cc  sTranspose_102_384x2320x64.h  sTranspose_10_890880x64.h  sTranspose_210_384x2320x64.h  ttc_offset.h  unit-test.cc
test/benchmark/: CMakeLists.txt
test/benchmark/inc/hptc/benchmark/: benchmark_trans.h  benchmark_trans.tcc  benchmark_trans_avx.h
test/benchmark/trans/: CMakeLists.txt  benchmark_trans_s.cc  hptt_bm_trans_s_merge.cc  hptt_bm_trans_s_nomerge.cc
test/benchmark/trans/avx/: benchmark_s_0132_24x16x24x16.cc  benchmark_s_021_2144x64x384.cc  benchmark_s_021_2144x64x384_par.cc  benchmark_s_021_368x384x384.cc  benchmark_s_021_368x64x2307.cc  benchmark_s_021_368x64x2307_par.cc  benchmark_s_0321_464x16x75x96.cc  benchmark_s_0321_80x16x75x582.cc  benchmark_s_0321_80x96x75x96.cc  benchmark_s_0321_80x96x75x96_par.cc  benchmark_s_032541_16x10x15x103x15x15.cc  benchmark_s_032541_16x32x15x32x15x15.cc  benchmark_s_032541_48x10x15x32x15x15.cc  benchmark_s_04213_176x8x28x28x48.cc  benchmark_s_04213_176x8x28x28x48_par.cc  benchmark_s_04213_32x48x28x28x48.cc  benchmark_s_04213_32x48x28x28x48_par.cc  benchmark_s_04213_32x8x28x28x298.cc  benchmark_s_04213_32x8x28x28x298_par.cc  benchmark_s_102_2320x384x59.cc  benchmark_s_102_2320x384x59_par.cc  benchmark_s_102_384x2320x59.cc  benchmark_s_102_384x384x355.cc  benchmark_s_1032_608x96x12x75.cc  benchmark_s_1032_608x96x12x75_par.cc  benchmark_s_1032_96x608x12x75.cc  benchmark_s_1032_96x96x75x75.cc  benchmark_s_10_1216x43408.cc  benchmark_s_10_43408x1216.cc  benchmark_s_10_43408x1216_par.cc  benchmark_s_10_7248x7248.cc  benchmark_s_13042_352x48x4x28x28.cc  benchmark_s_13042_48x352x4x28x28.cc  benchmark_s_13042_48x48x28x28x28.cc  benchmark_s_13042_48x48x28x28x28_par.cc  benchmark_s_2031_608x12x96x75.cc  benchmark_s_2031_608x12x96x75_par.cc  benchmark_s_2031_96x12x608x75.cc  benchmark_s_2031_96x75x96x75.cc  benchmark_s_20413_352x4x48x28x28.cc  (+38 more)
test/inc/hptc/: test_util.h  test_util.tcc
test/inc/hptc/unit-test/: test_infra.h  test_tensor_wrapper.h
test/inc/hptt/: test_util.h  test_util.tcc
test/inc/unit-test/: test_tensor_util.h  test_tensor_wrapper.h
test/test/: CMakeLists.txt  unit-test-common.cc  unit-test-trans.cc
test/test/hptc/unit-test/: test_tensor_util.h  test_tensor_wrapper.h
test/test/unit-test/: test_tensor_util.h  test_tensor_wrapper.h  test_util.h
test/test/unit-test/kernels/: test_intrin_avx.h  test_kernel_trans_avx.h
test/test/unit-test/operations/: test_operation_base.h  test_operation_trans.h
(+195 files in other folders)
