# ----------------------------------------------------------------------------
# Directory setting
# ----------------------------------------------------------------------------
include_directories(inc)
include_directories(../test/inc)

# ----------------------------------------------------------------------------
# Add benchmark source files
# ----------------------------------------------------------------------------
add_subdirectory(trans)
