# ----------------------------------------------------------------------------
# Directory setting
# ----------------------------------------------------------------------------
include_directories(inc)

# ----------------------------------------------------------------------------
# Add benchmark source files
# ----------------------------------------------------------------------------
add_subdirectory(trans)
